removed travis ci from project

--- a/src/index.html
+++ b/src/index.html
@@ -26,3 +26,4 @@
 </html>
 
 <!-- testing for pull requests -->
+<!-- removed the travis integration for this project as i am checking the jenkins pull request build is working or not -->
